# hydrigo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check_when_push.yaml
hydrigo_macros/: Cargo.toml
hydrigo_macros/src/: lib.rs
src/: component.rs  lib.rs  main.rs  prelude.rs  state.rs  stylesheet.rs  util.rs  value.rs
src/components/: group.rs  macros.rs  mod.rs  prelude.rs  raw_text.rs  text.rs
