[package]
name = "hydrigo"
version = "0.0.0"
edition = "2021"

license-file = "./LICENSE"
description = "Hydrigo is a fast low-level text user interface renderer with the power of Rust."
homepage = "https://github.com/snxlife/hydrigo"
documentation = "https://github.com/snxlife/hydrigo"
repository = "https://github.com/snxlife/hydrigo"
readme = "./README.md"
keywords = [ "tui", "terminal", "hydrigo" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
